Fix T52723: Reset UV layers failed